[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-downloader-cli"
version = "0.1.0"
description = "CLI sederhana untuk mendownload video internet, fokus awal YouTube."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2024.4.9",
  "rich>=13.7",
]

[project.scripts]
video-dl = "downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
